--- a/Index.html
+++ b/Index.html
@@ -11,8 +11,8 @@
 <ol><li>Basketball</li>
 <li>Video Games</li>
 <li>Movies</li></ol>
-<p><a href="https://www.youtube.com/watch?v=nGYArc7UmGE">Visit trailer for new movie Deadpool 3!</a></p><img src = "Deadpool.jpg">
+<p><a href="https://www.youtube.com/watch?v=nGYArc7UmGE">Visit trailer for new movie Deadpool 3!</a></p><img src = "Deadpool.jpg" alt= "Deadpool">
 <hr>
-<h2>06/11/2024, Saahil Malik</h2>
+<h2>06/12/2024, Saahil Malik</h2>
 </body>
 </html>
