--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,7 @@
 <li>Video Games</li>
 <li>Movies</li></ol>
 <p><a href="https://www.youtube.com/watch?v=nGYArc7UmGE">Visit trailer for new movie Deadpool 3!</a></p><img src = "Deadpool.webp" alt="Deadpool">
+<p><a href="https://www.youtube.com/watch?v=nGYArc7UmGE">Visit trailer for new movie Deadpool 3!</a></p><img src = "https://www.shutterstock.com/image-vector/deadpool-icon-art-design-danger-600nw-2291818891.jpg" alt="Deadpool">
 <hr>
 <h2>06/12/2024, Saahil Malik</h2>
 </body>
