--- a/lab3.html
+++ b/lab3.html
@@ -32,7 +32,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="https://github.com/Smalik5/Smalik5.github.io">Homepage</a>
+                <a class="nav-link active" aria-current="page" href="https://github.com/Smalik5/Smalik5.github.io/blob/main/lab3.html">Homepage</a>
         </li>
         <br>
     </div>
